# detectmpi

./: CMakeLists.txt  README.md
cmake/: DetermineMPIStack.cmake
